--- a/Music/css/global.css
+++ b/Music/css/global.css
@@ -241,3 +241,11 @@ footer{
 	border-radius: 50%;
 	margin-right: .5em;
 }
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
