--- a/Music/css/global.css
+++ b/Music/css/global.css
@@ -249,3 +249,18 @@ footer{
 
 /./././././././././.
 /./././././././././././././././././././././././././././././.
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././././././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
