--- a/Music/css/global.css
+++ b/Music/css/global.css
@@ -264,3 +264,11 @@ footer{
 
 /./././././././././.
 /./././././././././././././././././././././././././././././.
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
+
+/./././././././././.
+/./././././././././././././././././././././././././././././.
